=Commit Login y LogOut

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
     <link id="tema" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="839432979841-l8e60djifffcm1lbg178r9cpn4q01tms.apps.googleusercontent.com">
+
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
